# tdediskmark

./: CMakeLists.txt  README.md  build.sh  clean.sh  create_deb.sh
aa-painter/: README.md  tqtaapainter.cpp  tqtaapainter.h
aa-painter/example/: main.cpp
data/: tdediskmark.desktop
meter-gauge/: README.md  tqtmetergauge.cpp  tqtmetergauge.h  tqtmetergauge_aa.cpp  tqtmetergauge_aa.h
meter-gauge/example/: main.cpp
meter-gauge/example_aa/: main.cpp
src/: about_png.h  about_tdediskmark_png.h  aboutdialog.cpp  aboutdialog.h  appsettings.cpp  appsettings.h  benchmark.cpp  benchmark.h  diskdriveinfo.cpp  diskdriveinfo.h  fly_png.h  global.cpp  global.h  go_png.h  main.cpp  mainwindow.cpp  mainwindow.h  race_png.h  refresh2_png.h  refresh_png.h  settings.cpp  settings.h  tdediskmark_png.h  tdedisksw_png.h  ui_about.h  ui_settings.h
